--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ellif_tech_back",
+  "name": "elif_tech_back",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "mongoose": "^7.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
