--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=14 <15"
+    "node": "18.10.0"
   },
   "scripts": {
     "build": "nest build",
